# icukr-pynotes

./: pyproject.toml
icukr_pynotes/built_in/_dataclass/: inferior.py
icukr_pynotes/built_in/_descriptor/: descriptor.ipynb
icukr_pynotes/built_in/_descriptor/.ipynb_checkpoints/: descriptor-checkpoint.ipynb
icukr_pynotes/oop/design_pattern/creational/: borg.py  builder.py  lazy_evaluation.py  pool.py  prototype.py
icukr_pynotes/oop/design_pattern/structural/: adapter.py
icukr_pynotes/utils/: archive.py
tests/learn/: test_base.py  test_fixture.py
