[tool.poetry]
name = "icukr-pynotes"
version = "0.1.0"
description = ""
authors = ["Little-Five <little_five_blogs@163.com>"]
readme = "README.md"
packages = [{include = "icukr_pynotes"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
